get all products by type/by profile name